[package]
name = "ruo"
version = "0.1.0"
edition = "2018"
authors = ["Asjid Kalam <asjid@odinshell.ninja>"]
description = "Tiny hash cracked written in rust."
repository = "https://github.com/Asjidkalam/ruo.git"
license = "MIT"

[dependencies]
instant = "0.1.9"
lazy_static = "1.4.0"
indicatif = "0.16.2"
rayon = "1.5.1"
easy_reader = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

md-5 = "0.9.1"
sha2 = "0.9.5"
sha1 = "0.6.0"
ripemd320 = "0.9.0"